--- a/src/Eccube/Resource/locale/message.ja.yml
+++ b/src/Eccube/Resource/locale/message.ja.yml
@@ -218,3 +218,6 @@ normal_price_title: 通常価格    # 未使用
 sale_price_title: 販売価格
 form.address1.help: '市区町村名 (例：千代田区神田神保町)'
 form.address2.help: '番地・ビル名 (例：1-3-5)'
+notification.product.detail: %name%さんから%product_name%にメッセージが届きました
+notification.farm.profile: %name%さんからコメントが届きました
+nofitication.order.new: %name%さんから注文が届きました。
